--- a/php-71-fpm-alpine/Dockerfile
+++ b/php-71-fpm-alpine/Dockerfile
@@ -224,7 +224,9 @@ RUN set -eux; \
 		echo 'daemonize = no'; \
 		echo; \
 		echo '[www]'; \
-		echo 'listen = 9000'; \
+		# echo 'listen = 9000'; \
+		echo 'listen = 0.0.0.0:9000'; \
+		# See Here https://github.com/docker-library/php/issues/194#issuecomment-196297008
 	} | tee php-fpm.d/zz-docker.conf
 
 # Override stop signal to stop process gracefully
