--- a/php-55-fpm-alpine/Dockerfile
+++ b/php-55-fpm-alpine/Dockerfile
@@ -1,4 +1,4 @@
-FROM satyadeep/alpine-linux:3.8
+FROM alpine:3.8
 
 LABEL MAINTAINER="SATYADEEP G" \
 		"GitHub Link"="https://github.com/satyadeep" \
@@ -53,7 +53,7 @@ ENV PHP_CPPFLAGS="$PHP_CFLAGS"
 ENV PHP_LDFLAGS="-Wl,-O1 -Wl,--hash-style=both -pie"
 
 # https://www.php.net/gpg-keys.php
-ENV GPG_KEYS 0B96609E270F565C13292B24C13C70B87267B52D 0BD78B5F97500D450838F95DFE857D9A90D90EC1 F38252826ACD957EF380D39F2F7956BC5DA04B5D
+ENV GPG_KEYS 0BD78B5F97500D450838F95DFE857D9A90D90EC1 0B96609E270F565C13292B24C13C70B87267B52D F38252826ACD957EF380D39F2F7956BC5DA04B5D
 
 ENV PHP_VERSION 5.5.38
 ENV PHP_URL="https://secure.php.net/get/php-5.5.38.tar.xz/from/this/mirror" PHP_ASC_URL="https://secure.php.net/get/php-5.5.38.tar.xz.asc/from/this/mirror"
@@ -82,7 +82,11 @@ RUN set -xe; \
 		wget -O php.tar.xz.asc "$PHP_ASC_URL"; \
 		export GNUPGHOME="$(mktemp -d)"; \
 		for key in $GPG_KEYS; do \
-			gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "$key"; \
+			# gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys "$key"; \
+			( gpg --keyserver keyserver.ubuntu.com/ --recv-keys "$key" \
+	        || gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "$key" \
+  			|| gpg --keyserver pgp.mit.edu --recv-keys "$key" \
+  			|| gpg --keyserver keyserver.pgp.com --recv-keys "$key" )\
 		done; \
 		gpg --batch --verify php.tar.xz.asc php.tar.xz; \
 		command -v gpgconf > /dev/null && gpgconf --kill all; \
