--- a/php-71-fpm-alpine/Dockerfile
+++ b/php-71-fpm-alpine/Dockerfile
@@ -85,7 +85,11 @@ RUN set -eux; \
 		curl -fsSL -o php.tar.xz.asc "$PHP_ASC_URL"; \
 		export GNUPGHOME="$(mktemp -d)"; \
 		for key in $GPG_KEYS; do \
-			gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys "$key"; \
+			# gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys "$key"; \
+		( gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "$key" \
+			|| gpg --keyserver hkp://p80.pool.sks-keyservers.net:80 \ --recv-keys "$key" \
+  			|| gpg --keyserver pgp.mit.edu --recv-keys "$key" \
+  			|| gpg --keyserver keyserver.pgp.com --recv-keys "$key" )\
 		done; \
 		gpg --batch --verify php.tar.xz.asc php.tar.xz; \
 		gpgconf --kill all; \
